--- a/Java/src/TelaPrincipal.fxml
+++ b/Java/src/TelaPrincipal.fxml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.web.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.shape.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="480.0" prefWidth="845.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
+<VBox prefHeight="480.0" prefWidth="845.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
-      <Text fx:id="TxtInfoModerador" lineSpacing="10.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" - CodeDrafts - Logado: Ion Mateus Nunes Oprea - Ion@Gmail.com - ID: 3" wrappingWidth="735.572265625">
+      <Text fx:id="TxtInfoModerador" lineSpacing="10.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" - CodeDrafts - Logado: Nome - E-mail - ID" wrappingWidth="735.572265625">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -175,6 +184,21 @@
                            </cursor>
                         </Button>
                         <Pane fx:id="ImgCapaPostUsuario" layoutX="561.0" layoutY="79.0" prefHeight="132.0" prefWidth="200.0" />
+                        <TextField fx:id="TxtUsernameSearch" layoutX="238.0" layoutY="8.0" prefHeight="34.0" prefWidth="244.0" promptText="Digite o username">
+                           <padding>
+                              <Insets left="40.0" />
+                           </padding>
+                        </TextField>
+                        <Button fx:id="BtnPesquisarUser" layoutX="410.0" layoutY="15.0" mnemonicParsing="false" onAction="#ActionPesquisarUser" prefHeight="20.0" prefWidth="61.0" style="-fx-background-color: #a01111;" text="Pesquisar" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="9.0" />
+                           </font>
+                        </Button>
+                        <ImageView fitHeight="32.0" fitWidth="46.0" layoutX="238.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@resources/search.png" />
+                           </image>
+                        </ImageView>
                      </children>
                   </AnchorPane>
                </content>
