--- a/public/styles/appStyle.css
+++ b/public/styles/appStyle.css
@@ -115,6 +115,7 @@ body{
     background-color: var(--main-brand);
     display: flex;
     align-items: center;
+    text-align: center;
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
