--- a/Java/src/TelaPrincipal.fxml
+++ b/Java/src/TelaPrincipal.fxml
@@ -330,9 +330,9 @@
                         </Text>
                         <Button fx:id="BtnExcluirConquista" layoutX="212.0" layoutY="400.0" mnemonicParsing="false" text="Excluir" textFill="RED" />
                         <ImageView fx:id="ImgImagemConquista" fitHeight="90.0" fitWidth="202.0" layoutX="203.0" layoutY="299.0" pickOnBounds="true" preserveRatio="true" />
-                        <TextField fx:id="TxtFieldSelecionarLinkConquista1" editable="false" layoutX="81.0" layoutY="337.0" prefHeight="25.0" prefWidth="129.0" promptText="Link da imagem" />
                         <ListView fx:id="ListaUsuariosConquista" layoutX="435.0" layoutY="58.0" prefHeight="176.0" prefWidth="390.0" />
                         <ListView fx:id="ListaConquista" layoutX="17.0" layoutY="44.0" prefHeight="176.0" prefWidth="390.0" />
+                        <Button fx:id="BtnProcurarImagemConquista" layoutX="78.0" layoutY="337.0" mnemonicParsing="false" text="Procurar Imagem" />
                      </children>
                   </AnchorPane>
                </content>
